...
            Image(systemName: "plus")
        }))
        .sheet(isPresented: $showAddSheet) {
            NavigationView {
                Form {
                    Section(header: Text("New Palace")) {
                        TextField("Name", text: $newPalaceName)
                    }
                }
                .navigationTitle(Text("Add Palace"))
                .toolbar {
                    ToolbarItem(placement: .cancellationAction) {
                        Button("Cancel") {
...
